# egui_mwe

./: Cargo.toml
src/: main.rs
